tests/ui/fail/unexpected_colon.rs
use macro_files::create;

fn main() {
    create!({
        : "# Title"
    });
}
